[gd_scene load_steps=8 format=3 uid="uid://bi5o0tagwd2hr"]

[ext_resource type="PackedScene" uid="uid://cu4taj58j1k5" path="res://Other Scenes/puzzle_template.tscn" id="1_8ofpy"]
[ext_resource type="Script" path="res://Scripts/password_interception_scene.gd" id="1_qydy8"]
[ext_resource type="Texture2D" uid="uid://dorvxqxj0mjs0" path="res://Assets/UI Panels/Panel/PanelNoF.png" id="2_0b5sy"]
[ext_resource type="Script" path="res://Scripts/PasswordInterceptionButtonScript.gd" id="4_77cch"]
[ext_resource type="Texture2D" uid="uid://duknmv52kfni5" path="res://Assets/UI Panels/Buttons/ButtonU.png" id="4_nl5ry"]
[ext_resource type="Texture2D" uid="uid://rblua4uuq8ig" path="res://Assets/UI Panels/Buttons/ButtonUF.png" id="5_pa10i"]

[sub_resource type="SystemFont" id="SystemFont_uepym"]
subpixel_positioning = 0

[node name="PasswordInterceptionScene" type="Node2D"]
script = ExtResource("1_qydy8")

[node name="puzzle_template" parent="." instance=ExtResource("1_8ofpy")]

[node name="Code" type="Label" parent="."]
offset_left = 456.0
offset_top = 128.0
offset_right = 696.0
offset_bottom = 208.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1
vertical_alignment = 1

[node name="Display" type="NinePatchRect" parent="."]
texture_filter = 1
offset_left = 448.0
offset_top = 120.0
offset_right = 491.0
offset_bottom = 136.0
scale = Vector2(6, 6)
texture = ExtResource("2_0b5sy")
draw_center = false
region_rect = Rect2(0, 0, 16, 16)
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 6
patch_margin_bottom = 6

[node name="ColorRect" type="ColorRect" parent="Display"]
z_index = -1
layout_mode = 0
offset_left = 1.33333
offset_top = 1.33333
offset_right = 41.3333
offset_bottom = 15.3333

[node name="Button1" type="Node2D" parent="."]
position = Vector2(408, 232)
script = ExtResource("4_77cch")
metadata/_edit_group_ = true

[node name="Graphic" type="Node2D" parent="Button1"]

[node name="BSOutline" type="NinePatchRect" parent="Button1/Graphic"]
visible = false
texture_filter = 1
offset_left = -1.0
offset_right = 42.0
offset_bottom = 22.0
scale = Vector2(6, 6)
texture = ExtResource("4_nl5ry")
draw_center = false
region_rect = Rect2(0, 0, 11, 21)
patch_margin_left = 5
patch_margin_top = 8
patch_margin_right = 5
patch_margin_bottom = 10

[node name="BSFill" type="NinePatchRect" parent="Button1/Graphic"]
modulate = Color(0.984505, 0.51643, 0, 1)
texture_filter = 1
offset_left = -1.0
offset_right = 19.0
offset_bottom = 20.0
scale = Vector2(6, 6)
texture = ExtResource("5_pa10i")
region_rect = Rect2(0, 0, 11, 21)
patch_margin_left = 5
patch_margin_top = 8
patch_margin_right = 5
patch_margin_bottom = 10

[node name="Button" type="Button" parent="Button1"]
modulate = Color(1, 1, 1, 0)
offset_left = -1.0
offset_right = 257.0
offset_bottom = 132.0

[node name="Number" type="Label" parent="Button1"]
offset_left = -1.0
offset_right = 80.0
offset_bottom = 69.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_uepym")
theme_override_font_sizes/font_size = 50
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Letters" type="Label" parent="Button1"]
offset_left = 48.0
offset_top = 24.0
offset_right = 96.0
offset_bottom = 72.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_uepym")
theme_override_font_sizes/font_size = 15
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button2" type="Node2D" parent="."]
position = Vector2(520, 232)
script = ExtResource("4_77cch")
metadata/_edit_group_ = true

[node name="Graphic" type="Node2D" parent="Button2"]

[node name="BSOutline" type="NinePatchRect" parent="Button2/Graphic"]
visible = false
texture_filter = 1
offset_left = -1.0
offset_right = 42.0
offset_bottom = 22.0
scale = Vector2(6, 6)
texture = ExtResource("4_nl5ry")
draw_center = false
region_rect = Rect2(0, 0, 11, 21)
patch_margin_left = 5
patch_margin_top = 8
patch_margin_right = 5
patch_margin_bottom = 10

[node name="BSFill" type="NinePatchRect" parent="Button2/Graphic"]
modulate = Color(0.984505, 0.51643, 0, 1)
texture_filter = 1
offset_left = -1.0
offset_right = 19.0
offset_bottom = 20.0
scale = Vector2(6, 6)
texture = ExtResource("5_pa10i")
region_rect = Rect2(0, 0, 11, 21)
patch_margin_left = 5
patch_margin_top = 8
patch_margin_right = 5
patch_margin_bottom = 10

[node name="Button" type="Button" parent="Button2"]
modulate = Color(1, 1, 1, 0)
offset_left = -1.0
offset_right = 257.0
offset_bottom = 132.0

[node name="Number" type="Label" parent="Button2"]
offset_left = -1.0
offset_right = 80.0
offset_bottom = 69.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_uepym")
theme_override_font_sizes/font_size = 50
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Letters" type="Label" parent="Button2"]
offset_left = 48.0
offset_top = 24.0
offset_right = 96.0
offset_bottom = 72.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_uepym")
theme_override_font_sizes/font_size = 15
text = "ABC"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button3" type="Node2D" parent="."]
position = Vector2(632, 232)
script = ExtResource("4_77cch")
metadata/_edit_group_ = true

[node name="Graphic" type="Node2D" parent="Button3"]

[node name="BSOutline" type="NinePatchRect" parent="Button3/Graphic"]
visible = false
texture_filter = 1
offset_left = -1.0
offset_right = 42.0
offset_bottom = 22.0
scale = Vector2(6, 6)
texture = ExtResource("4_nl5ry")
draw_center = false
region_rect = Rect2(0, 0, 11, 21)
patch_margin_left = 5
patch_margin_top = 8
patch_margin_right = 5
patch_margin_bottom = 10

[node name="BSFill" type="NinePatchRect" parent="Button3/Graphic"]
modulate = Color(0.984505, 0.51643, 0, 1)
texture_filter = 1
offset_left = -1.0
offset_right = 19.0
offset_bottom = 20.0
scale = Vector2(6, 6)
texture = ExtResource("5_pa10i")
region_rect = Rect2(0, 0, 11, 21)
patch_margin_left = 5
patch_margin_top = 8
patch_margin_right = 5
patch_margin_bottom = 10

[node name="Button" type="Button" parent="Button3"]
modulate = Color(1, 1, 1, 0)
offset_left = -1.0
offset_right = 257.0
offset_bottom = 132.0

[node name="Number" type="Label" parent="Button3"]
offset_left = -1.0
offset_right = 80.0
offset_bottom = 69.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_uepym")
theme_override_font_sizes/font_size = 50
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Letters" type="Label" parent="Button3"]
offset_left = 48.0
offset_top = 24.0
offset_right = 96.0
offset_bottom = 72.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_uepym")
theme_override_font_sizes/font_size = 15
text = "DEF"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button4" type="Node2D" parent="."]
position = Vector2(408, 320)
script = ExtResource("4_77cch")
metadata/_edit_group_ = true

[node name="Graphic" type="Node2D" parent="Button4"]

[node name="BSOutline" type="NinePatchRect" parent="Button4/Graphic"]
visible = false
texture_filter = 1
offset_left = -1.0
offset_right = 42.0
offset_bottom = 22.0
scale = Vector2(6, 6)
texture = ExtResource("4_nl5ry")
draw_center = false
region_rect = Rect2(0, 0, 11, 21)
patch_margin_left = 5
patch_margin_top = 8
patch_margin_right = 5
patch_margin_bottom = 10

[node name="BSFill" type="NinePatchRect" parent="Button4/Graphic"]
modulate = Color(0.984505, 0.51643, 0, 1)
texture_filter = 1
offset_left = -1.0
offset_right = 19.0
offset_bottom = 20.0
scale = Vector2(6, 6)
texture = ExtResource("5_pa10i")
region_rect = Rect2(0, 0, 11, 21)
patch_margin_left = 5
patch_margin_top = 8
patch_margin_right = 5
patch_margin_bottom = 10

[node name="Button" type="Button" parent="Button4"]
modulate = Color(1, 1, 1, 0)
offset_left = -1.0
offset_right = 257.0
offset_bottom = 132.0

[node name="Number" type="Label" parent="Button4"]
offset_left = -1.0
offset_right = 80.0
offset_bottom = 69.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_uepym")
theme_override_font_sizes/font_size = 50
text = "4"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Letters" type="Label" parent="Button4"]
offset_left = 48.0
offset_top = 24.0
offset_right = 96.0
offset_bottom = 72.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_uepym")
theme_override_font_sizes/font_size = 15
text = "GHI"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button5" type="Node2D" parent="."]
position = Vector2(520, 320)
script = ExtResource("4_77cch")
metadata/_edit_group_ = true

[node name="Graphic" type="Node2D" parent="Button5"]

[node name="BSOutline" type="NinePatchRect" parent="Button5/Graphic"]
visible = false
texture_filter = 1
offset_left = -1.0
offset_right = 42.0
offset_bottom = 22.0
scale = Vector2(6, 6)
texture = ExtResource("4_nl5ry")
draw_center = false
region_rect = Rect2(0, 0, 11, 21)
patch_margin_left = 5
patch_margin_top = 8
patch_margin_right = 5
patch_margin_bottom = 10

[node name="BSFill" type="NinePatchRect" parent="Button5/Graphic"]
modulate = Color(0.984505, 0.51643, 0, 1)
texture_filter = 1
offset_left = -1.0
offset_right = 19.0
offset_bottom = 20.0
scale = Vector2(6, 6)
texture = ExtResource("5_pa10i")
region_rect = Rect2(0, 0, 11, 21)
patch_margin_left = 5
patch_margin_top = 8
patch_margin_right = 5
patch_margin_bottom = 10

[node name="Button" type="Button" parent="Button5"]
modulate = Color(1, 1, 1, 0)
offset_left = -1.0
offset_right = 257.0
offset_bottom = 132.0

[node name="Number" type="Label" parent="Button5"]
offset_left = -1.0
offset_right = 80.0
offset_bottom = 69.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_uepym")
theme_override_font_sizes/font_size = 50
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Letters" type="Label" parent="Button5"]
offset_left = 48.0
offset_top = 24.0
offset_right = 96.0
offset_bottom = 72.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_uepym")
theme_override_font_sizes/font_size = 15
text = "JKL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button6" type="Node2D" parent="."]
position = Vector2(632, 320)
script = ExtResource("4_77cch")
metadata/_edit_group_ = true

[node name="Graphic" type="Node2D" parent="Button6"]

[node name="BSOutline" type="NinePatchRect" parent="Button6/Graphic"]
visible = false
texture_filter = 1
offset_left = -1.0
offset_right = 42.0
offset_bottom = 22.0
scale = Vector2(6, 6)
texture = ExtResource("4_nl5ry")
draw_center = false
region_rect = Rect2(0, 0, 11, 21)
patch_margin_left = 5
patch_margin_top = 8
patch_margin_right = 5
patch_margin_bottom = 10

[node name="BSFill" type="NinePatchRect" parent="Button6/Graphic"]
modulate = Color(0.984505, 0.51643, 0, 1)
texture_filter = 1
offset_left = -1.0
offset_right = 19.0
offset_bottom = 20.0
scale = Vector2(6, 6)
texture = ExtResource("5_pa10i")
region_rect = Rect2(0, 0, 11, 21)
patch_margin_left = 5
patch_margin_top = 8
patch_margin_right = 5
patch_margin_bottom = 10

[node name="Button" type="Button" parent="Button6"]
modulate = Color(1, 1, 1, 0)
offset_left = -1.0
offset_right = 257.0
offset_bottom = 132.0

[node name="Number" type="Label" parent="Button6"]
offset_left = -1.0
offset_right = 80.0
offset_bottom = 69.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_uepym")
theme_override_font_sizes/font_size = 50
text = "6"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Letters" type="Label" parent="Button6"]
offset_left = 48.0
offset_top = 24.0
offset_right = 96.0
offset_bottom = 72.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_uepym")
theme_override_font_sizes/font_size = 15
text = "MNO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button7" type="Node2D" parent="."]
position = Vector2(408, 408)
script = ExtResource("4_77cch")
metadata/_edit_group_ = true

[node name="Graphic" type="Node2D" parent="Button7"]

[node name="BSOutline" type="NinePatchRect" parent="Button7/Graphic"]
visible = false
texture_filter = 1
offset_left = -1.0
offset_right = 42.0
offset_bottom = 22.0
scale = Vector2(6, 6)
texture = ExtResource("4_nl5ry")
draw_center = false
region_rect = Rect2(0, 0, 11, 21)
patch_margin_left = 5
patch_margin_top = 8
patch_margin_right = 5
patch_margin_bottom = 10

[node name="BSFill" type="NinePatchRect" parent="Button7/Graphic"]
modulate = Color(0.984505, 0.51643, 0, 1)
texture_filter = 1
offset_left = -1.0
offset_right = 19.0
offset_bottom = 20.0
scale = Vector2(6, 6)
texture = ExtResource("5_pa10i")
region_rect = Rect2(0, 0, 11, 21)
patch_margin_left = 5
patch_margin_top = 8
patch_margin_right = 5
patch_margin_bottom = 10

[node name="Button" type="Button" parent="Button7"]
modulate = Color(1, 1, 1, 0)
offset_left = -1.0
offset_right = 257.0
offset_bottom = 132.0

[node name="Number" type="Label" parent="Button7"]
offset_left = -1.0
offset_right = 80.0
offset_bottom = 69.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_uepym")
theme_override_font_sizes/font_size = 50
text = "7"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Letters" type="Label" parent="Button7"]
offset_left = 48.0
offset_top = 24.0
offset_right = 96.0
offset_bottom = 72.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_uepym")
theme_override_font_sizes/font_size = 15
text = "PQRS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button8" type="Node2D" parent="."]
position = Vector2(520, 408)
script = ExtResource("4_77cch")
metadata/_edit_group_ = true

[node name="Graphic" type="Node2D" parent="Button8"]

[node name="BSOutline" type="NinePatchRect" parent="Button8/Graphic"]
visible = false
texture_filter = 1
offset_left = -1.0
offset_right = 42.0
offset_bottom = 22.0
scale = Vector2(6, 6)
texture = ExtResource("4_nl5ry")
draw_center = false
region_rect = Rect2(0, 0, 11, 21)
patch_margin_left = 5
patch_margin_top = 8
patch_margin_right = 5
patch_margin_bottom = 10

[node name="BSFill" type="NinePatchRect" parent="Button8/Graphic"]
modulate = Color(0.984505, 0.51643, 0, 1)
texture_filter = 1
offset_left = -1.0
offset_right = 19.0
offset_bottom = 20.0
scale = Vector2(6, 6)
texture = ExtResource("5_pa10i")
region_rect = Rect2(0, 0, 11, 21)
patch_margin_left = 5
patch_margin_top = 8
patch_margin_right = 5
patch_margin_bottom = 10

[node name="Button" type="Button" parent="Button8"]
modulate = Color(1, 1, 1, 0)
offset_left = -1.0
offset_right = 257.0
offset_bottom = 132.0

[node name="Number" type="Label" parent="Button8"]
offset_left = -1.0
offset_right = 80.0
offset_bottom = 69.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_uepym")
theme_override_font_sizes/font_size = 50
text = "8"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Letters" type="Label" parent="Button8"]
offset_left = 48.0
offset_top = 24.0
offset_right = 96.0
offset_bottom = 72.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_uepym")
theme_override_font_sizes/font_size = 15
text = "TUV"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button9" type="Node2D" parent="."]
position = Vector2(632, 408)
script = ExtResource("4_77cch")
metadata/_edit_group_ = true

[node name="Graphic" type="Node2D" parent="Button9"]

[node name="BSOutline" type="NinePatchRect" parent="Button9/Graphic"]
visible = false
texture_filter = 1
offset_left = -1.0
offset_right = 42.0
offset_bottom = 22.0
scale = Vector2(6, 6)
texture = ExtResource("4_nl5ry")
draw_center = false
region_rect = Rect2(0, 0, 11, 21)
patch_margin_left = 5
patch_margin_top = 8
patch_margin_right = 5
patch_margin_bottom = 10

[node name="BSFill" type="NinePatchRect" parent="Button9/Graphic"]
modulate = Color(0.984505, 0.51643, 0, 1)
texture_filter = 1
offset_left = -1.0
offset_right = 19.0
offset_bottom = 20.0
scale = Vector2(6, 6)
texture = ExtResource("5_pa10i")
region_rect = Rect2(0, 0, 11, 21)
patch_margin_left = 5
patch_margin_top = 8
patch_margin_right = 5
patch_margin_bottom = 10

[node name="Button" type="Button" parent="Button9"]
modulate = Color(1, 1, 1, 0)
offset_left = -1.0
offset_right = 257.0
offset_bottom = 132.0

[node name="Number" type="Label" parent="Button9"]
offset_left = -1.0
offset_right = 80.0
offset_bottom = 69.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_uepym")
theme_override_font_sizes/font_size = 50
text = "9"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Letters" type="Label" parent="Button9"]
offset_left = 48.0
offset_top = 24.0
offset_right = 96.0
offset_bottom = 72.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_uepym")
theme_override_font_sizes/font_size = 15
text = "WXYZ"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="button_pushed" from="Button1" to="." method="_on_button_1_button_pushed"]
[connection signal="button_down" from="Button1/Button" to="Button1" method="buttonDown"]
[connection signal="button_up" from="Button1/Button" to="Button1" method="buttonUp"]
[connection signal="pressed" from="Button1/Button" to="Button1" method="buttonPressed"]
[connection signal="button_pushed" from="Button2" to="." method="_on_button_2_button_pushed"]
[connection signal="button_down" from="Button2/Button" to="Button2" method="buttonDown"]
[connection signal="button_up" from="Button2/Button" to="Button2" method="buttonUp"]
[connection signal="pressed" from="Button2/Button" to="Button2" method="buttonPressed"]
[connection signal="button_pushed" from="Button3" to="." method="_on_button_3_button_pushed"]
[connection signal="button_down" from="Button3/Button" to="Button3" method="buttonDown"]
[connection signal="button_up" from="Button3/Button" to="Button3" method="buttonUp"]
[connection signal="pressed" from="Button3/Button" to="Button3" method="buttonPressed"]
[connection signal="button_pushed" from="Button4" to="." method="_on_button_4_button_pushed"]
[connection signal="button_down" from="Button4/Button" to="Button4" method="buttonDown"]
[connection signal="button_up" from="Button4/Button" to="Button4" method="buttonUp"]
[connection signal="pressed" from="Button4/Button" to="Button4" method="buttonPressed"]
[connection signal="button_pushed" from="Button5" to="." method="_on_button_5_button_pushed"]
[connection signal="button_down" from="Button5/Button" to="Button5" method="buttonDown"]
[connection signal="button_up" from="Button5/Button" to="Button5" method="buttonUp"]
[connection signal="pressed" from="Button5/Button" to="Button5" method="buttonPressed"]
[connection signal="button_pushed" from="Button6" to="." method="_on_button_6_button_pushed"]
[connection signal="button_down" from="Button6/Button" to="Button6" method="buttonDown"]
[connection signal="button_up" from="Button6/Button" to="Button6" method="buttonUp"]
[connection signal="pressed" from="Button6/Button" to="Button6" method="buttonPressed"]
[connection signal="button_pushed" from="Button7" to="." method="_on_button_7_button_pushed"]
[connection signal="button_down" from="Button7/Button" to="Button7" method="buttonDown"]
[connection signal="button_up" from="Button7/Button" to="Button7" method="buttonUp"]
[connection signal="pressed" from="Button7/Button" to="Button7" method="buttonPressed"]
[connection signal="button_pushed" from="Button8" to="." method="_on_button_8_button_pushed"]
[connection signal="button_down" from="Button8/Button" to="Button8" method="buttonDown"]
[connection signal="button_up" from="Button8/Button" to="Button8" method="buttonUp"]
[connection signal="pressed" from="Button8/Button" to="Button8" method="buttonPressed"]
[connection signal="button_pushed" from="Button9" to="." method="_on_button_9_button_pushed"]
[connection signal="button_down" from="Button9/Button" to="Button9" method="buttonDown"]
[connection signal="button_up" from="Button9/Button" to="Button9" method="buttonUp"]
[connection signal="pressed" from="Button9/Button" to="Button9" method="buttonPressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
